--- a/Module02_HW.ipynb
+++ b/Module02_HW.ipynb
@@ -100,6 +100,20 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "###***II. What is the difference between the supervised learning and unsupervised learning?***\n",
+        "\n",
+        "**Supervised Learning__**is  a machine Technique where the algorithm learns from a *labeled dataset*. \n",
+        "A *labeled data* means that each example in the dataset is associatedd with a corresponding Target/Outout value.\n",
+        "\n",
+        "**Unsupervised Learning**__is a machine technique where the algorithm learns from an *unlabeled dataset*. There no predefined TARGET VALUES associated with the input data. Unsupervised learning is to find *patterns, structures/relationship* within the data itself.\n"
+      ],
+      "metadata": {
+        "id": "ibu4HhNJ9BtK"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
         "id": "1M29khkI6Me6"
