--- a/Module02_HW.ipynb
+++ b/Module02_HW.ipynb
@@ -116,7 +116,25 @@
       "cell_type": "markdown",
       "source": [],
       "metadata": {
+        "id": "4bxd5Ir6_DZ4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##**IV. Describe the roadmap of building a machine learning system**\n",
+        "\n",
+        "[click here to see the answer](https://docs.google.com/document/d/14PENodwmZRSWvWOf09k2Y5q-vLdxXQHLOjb7SYMrEF8/edit?usp=sharing)"
+      ],
+      "metadata": {
         "id": "1M29khkI6Me6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "Vy4FytzU_Bmi"
       }
     }
   ]
