--- a/Module02_HW.ipynb
+++ b/Module02_HW.ipynb
@@ -114,7 +114,19 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "##**III. Classification vs Regression**\n",
+        "\n",
+        "They differ in terms of type of output they produce, the nature of the predicted value, the overrall  goal, and the evaluation Metrics used.\n",
+        "\n",
+        "\n",
+        "*   Classification__focuses on assigning predefined labels to inputs\n",
+        "*   Regression__ aims to estimate a specific numerical value based on input variables\n",
+        "\n",
+        "Click [here](https://docs.google.com/document/d/1ugA4f9a7PMMRv6CAyIEpr7FNyY8zLRQhct94IyBaio0/edit?usp=sharing) to see more \n",
+        "\n",
+        "\n"
+      ],
       "metadata": {
         "id": "4bxd5Ir6_DZ4"
       }
@@ -124,7 +136,7 @@
       "source": [
         "##**IV. Describe the roadmap of building a machine learning system**\n",
         "\n",
-        "[click here to see the answer](https://docs.google.com/document/d/14PENodwmZRSWvWOf09k2Y5q-vLdxXQHLOjb7SYMrEF8/edit?usp=sharing)"
+        "Click [here](https://docs.google.com/document/d/14PENodwmZRSWvWOf09k2Y5q-vLdxXQHLOjb7SYMrEF8/edit?usp=sharing) to see the answerto see the answer"
       ],
       "metadata": {
         "id": "1M29khkI6Me6"
@@ -132,10 +144,54 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "##**VI. What is wTx? **\n",
+        "\n",
+        "W^tx = [1, 3, -1] * [2, 3, 4]\n",
+        "     = (1 * 2) + (3 * 3) + (-1 * 4)\n",
+        "     =    2    +    9    -     4\n",
+        "     = 7"
+      ],
       "metadata": {
         "id": "Vy4FytzU_Bmi"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# VII. Using Numpy create and print w and x in #7; \n",
+        "# calculate the wTx to check your previous answer.\n",
+        "\n",
+        "# import numpy\n",
+        "import numpy as np\n",
+        "\n",
+        "# Create w and x as NumPy arrays\n",
+        "w = np.array([1, 3, -1])\n",
+        "x = np.array([2, 3, 4])\n",
+        "\n",
+        "# Calculate W^T x\n",
+        "wTx = np.dot(w, x)\n",
+        "\n",
+        "#print the result\n",
+        "print(wTx)"
+      ],
+      "metadata": {
+        "id": "HXC-TwSsAmZ3",
+        "outputId": "0f0795d5-359f-4555-a104-0dae32222cc3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n"
+          ]
+        }
+      ]
     }
   ]
 }
