--- a/Module02_HW.ipynb
+++ b/Module02_HW.ipynb
@@ -101,7 +101,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###***II. What is the difference between the supervised learning and unsupervised learning?***\n",
+        "##**II. What is the difference between the supervised learning and unsupervised learning?**\n",
         "\n",
         "**Supervised Learning__**is  a machine Technique where the algorithm learns from a *labeled dataset*. \n",
         "A *labeled data* means that each example in the dataset is associatedd with a corresponding Target/Outout value.\n",
@@ -145,6 +145,21 @@
     {
       "cell_type": "markdown",
       "source": [
+        "##**In the iris data set, explain what are x(3), x3, and x(3)3?**\n",
+        "\n",
+        "**x(3)** -- > this is the superScript Three, and corresponds to row 3. It is not a exponent, it is a superScript inside a parentheses.\n",
+        "\n",
+        "**x3**   --> this is subscript 3 and corresponds to column 3\n",
+        "\n",
+        "**x(3)3**  --> This is the third flower"
+      ],
+      "metadata": {
+        "id": "oVdYP33Tef0m"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "##**VI. What is wTx? **\n",
         "\n",
         "W^tx = [1, 3, -1] * [2, 3, 4]\n",
@@ -182,7 +197,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
