--- a/Module03_HW.ipynb
+++ b/Module03_HW.ipynb
@@ -70,6 +70,108 @@
         "3. Draw a scatter plot of the binary classification (isLemon) by two features (mass, height). \n",
         "4. Add x0 vector to the feature matrix X. Apply the perceptron algorithm to predict the classification (isLemon). What is the smallest number of misclassified samples you can get? (hint: try a very large number of epoch because the optimization of our current perceptron method is not efficient)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd                \n",
+        "# because this data set has no head (column names), we set head=None\n",
+        "\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/franklin-univ-data-science/data/master/fruit.csv', header=None) \n",
+        "# df[:50]\n",
+        "# # df[2].value_counts()"
+      ],
+      "metadata": {
+        "id": "ckEg2PqdGanC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[0].value_counts()"
+      ],
+      "metadata": {
+        "id": "Hmzd_nFWI8qn",
+        "outputId": "e2b5f3b3-3ce8-44a6-b587-afe80569601c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "apple         19\n",
+              "lemon         16\n",
+              "mandarin       5\n",
+              "fruit_name     1\n",
+              "Name: 0, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# import numpy\n",
+        "import numpy as np\n",
+        "\n",
+        "# np.where?"
+      ],
+      "metadata": {
+        "id": "ybyG7XHZKMl2"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from ast import increment_lineno\n",
+        "# Define the features as mass and height, and the target as the variable \"isLemon\", \n",
+        "# which is derived by yourself (if fruit is lemon then 1 else -1). \n",
+        "# Print the feature matrix and target vector, respectively.\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "%matplotlib inline \n",
+        "\n",
+        "# define target vector \"isLemon\"\n",
+        "isLemon = df.iloc[0:40, 0].values ## select the label column in first 40 instances, which have apple, lemon and mandarin\n",
+        "\n",
+        "isLemon = np.where(isLemon == 'lemon', -1, 1) ## define the target (lemon as -1, apple and mandarin as 1)\n",
+        "\n",
+        "isLemon\n"
+      ],
+      "metadata": {
+        "id": "i5TTOnCqKWdL",
+        "outputId": "59dfedeb-bf1e-4609-b93e-dc311b6abf12",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1,\n",
+              "        1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,\n",
+              "        1,  1,  1,  1,  1,  1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
     }
   ]
 }
