--- a/Module04_HW.ipynb
+++ b/Module04_HW.ipynb
@@ -80,6 +80,90 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**1. Summarize the basic idea of logistic regression, support vector machines (SVM), and decision tree.**\n",
+        "\n",
+        "\n",
+        "*   Logistic Regression\n",
+        "     is a technique used to predict the outcome of something based on certain factors. Imagine you want to predict whether a student will pass or fail an exam based on their study time. Logistic regression helps us find the relationship between study time and the likelihood of passing or failing. It uses a mathematical formula to calculate the probability of an event happening. In this case, it calculates the probability of passing the exam based on the study time. It's like making an educated guess based on available data.\n",
+        "\n",
+        "--\n",
+        "*   Support Vector Machines (SVM)\n",
+        "    are like drawing a line to separate things. Imagine you have a group of red and blue balloons mixed together. SVM helps you find the best way to draw a line between the red and blue balloons so that they are well-separated. Once the line is drawn, you can easily tell if a new balloon should be red or blue by checking which side of the line it falls on. SVM helps you classify things based on their features.\n",
+        "\n",
+        "--\n",
+        "*   Decision Trees\n",
+        "    are like playing a guessing game. Let's say you want to figure out what animal someone is thinking of by asking a series of questions. Each question helps you narrow down the options until you can make a good guess. Decision trees work in a similar way. They ask questions about the characteristics of something and follow different paths until they reach a conclusion or a prediction. It helps you make decisions or predict outcomes by asking simple questions and getting closer to the answer step by step.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "oK9ii2yLIrfe"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**2. Read the section of Random Forest, and summarize the major steps**\n",
+        "\n",
+        "Random Forest is a machine learning algorithm that combines the predictions of many decision trees to make accurate predictions. It's used for things like identifying images, detecting spam emails, and predicting prices.\n",
+        "How Random Forest works:\n",
+        "\n",
+        "*   First, we gather data with known labels. Then, we create a bunch of decision trees using different parts of the data and features.\n",
+        "\n",
+        "*   Each tree makes its own prediction.\n",
+        "\n",
+        "*   When we want to predict something new, we ask each tree for its prediction.\n",
+        "\n",
+        "*   And the final answer is the most common prediction from all the trees.\n",
+        "Random Forest is good because it avoids overfitting and handles missing values.\n",
+        "\n",
+        "--\n",
+        "\n",
+        "***Note:*** Random Forest can be slower and more time-consuming compared to simpler algorithms due to the use of multiple decision trees.\n"
+      ],
+      "metadata": {
+        "id": "CUpFgZEUKR7B"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**3. Why do we split samples into training and test set?**\n",
+        "\n",
+        "We split samples into training and test sets to check how well a model can predict new information it hasn't seen before. The training set is like a practice set for the model to learn from, and the test set is like a quiz to see how well it learned. By using separate sets, we can see if the model is good at guessing on new things or if it only remembers what it practiced.\n",
+        "\n",
+        "In another words, We split the samples into training and test sets to ensure an unbiased evaluation of the model's performance on unseen data, which helps us assess its ability to generalize and make accurate predictions.\n",
+        "\n",
+        "\n",
+        " **What does the stratify mean?**\n",
+        "\"Stratify means \" ensuring that our machine learning models are trained and evaluated on a representative sample of data. It helps prevent bias and ensures that our models can accurately handle different categories or types of data. By maintaining the same proportion of categories in each subset, we can get a better understanding of how well our models perform across the entire dataset, particularly when dealing with imbalanced data where some categories may have fewer samples.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "YNpjcrkUKblo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Explain what are the bias-variance trade off and regularization.\n"
+      ],
+      "metadata": {
+        "id": "OWloz5KTKdFd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "When do we use SVM's kernel method?"
+      ],
+      "metadata": {
+        "id": "UlXmHIHmKeig"
+      }
     }
   ]
 }
