--- a/Module04_HW.ipynb
+++ b/Module04_HW.ipynb
@@ -150,7 +150,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Explain what are the bias-variance trade off and regularization.\n"
+        "**4. Explain what are the bias-variance trade off and regularization.**\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   The bias-variance trade-off refers to the relationship between a model's bias (simplification) and variance (flexibility). A model with high bias tends to oversimplify the data, leading to underfitting and poor predictive performance. On the other hand, a model with high variance tries to fit the training data too closely, resulting in overfitting and limited generalization to new data. The goal is to find an optimal trade-off between bias and variance that minimizes overall prediction error.\n",
+        "\n",
+        "--\n",
+        "*   Regularization is like adding a rule to make sure our model doesn't get too complicated and focus on unnecessary details. It helps prevent the model from overfitting, which means memorizing specific examples too well but not understanding the bigger picture. By using regularization, we encourage the model to find simpler and more general patterns in the data, which makes it better at making predictions on new and unseen situations.\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "OWloz5KTKdFd"
@@ -159,7 +168,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "When do we use SVM's kernel method?"
+        "**5. When do we use SVM's kernel method?**\n",
+        "\n",
+        "We use the kernel method in SVMs when the data is not easily separated by a straight line or plane. It helps us transform the data into a higher-dimensional space where we can draw a line or plane to separate different groups. This is useful for complex data that has complicated patterns. For example, it can help us recognize images, classify text, or find unusual things in data."
       ],
       "metadata": {
         "id": "UlXmHIHmKeig"
