--- a/Module04_HW.ipynb
+++ b/Module04_HW.ipynb
@@ -74,9 +74,77 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Load the scikit-learn's Wine recognition dataset\n",
+        "from sklearn import datasets\n",
+        "import numpy as np\n",
+        "\n",
+        "df = datasets.load_wine()\n",
+        "\n",
+        "X = df.data\n",
+        "y = df.target"
+      ],
       "metadata": {
         "id": "zJiDaX-dhJ3H"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(df.target_names)\n",
+        "print(df.feature_names)"
+      ],
+      "metadata": {
+        "id": "iKZIFdOwX4Lj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Load the \"train_test_split\" function from \"model_selection\"\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# separate 20% data as test data set\n",
+        "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42) #This parameter is used to ensure that the data split is reproducible. By setting it to a specific value, in this case, 42, we ensure that every time we run the code, the data will be split in the same way. This is important for reproducibility and consistent evaluation of our models.\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    X, y,\n",
+        "    test_size=0.2,\n",
+        "    random_state=2,\n",
+        "    stratify=y\n",
+        ")\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "g5v60YYAYbSr"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DdQkC3TWbwQO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Print the accuracy in the test set of each method.\n",
+        "\n",
+        "print(\"Logistic Regression Accuracy:\", logreg_accuracy)\n",
+        "print(\"Support Vector Machines Accuracy:\", svm_accuracy)\n",
+        "print(\"Decision Tree Accuracy:\", dt_accuracy)"
+      ],
+      "metadata": {
+        "id": "8TD9Sy7tbwce"
       },
       "execution_count": null,
       "outputs": []
