--- a/Module04_HW.ipynb
+++ b/Module04_HW.ipynb
@@ -82,25 +82,29 @@
         "df = datasets.load_wine()\n",
         "\n",
         "X = df.data\n",
-        "y = df.target"
-      ],
-      "metadata": {
-        "id": "zJiDaX-dhJ3H"
-      },
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "y = df.target\n",
+        "\n",
         "print(df.target_names)\n",
         "print(df.feature_names)"
       ],
       "metadata": {
-        "id": "iKZIFdOwX4Lj"
+        "id": "zJiDaX-dhJ3H",
+        "outputId": "f12aa9d3-c5b1-4b59-c8a5-e1daea35e66e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['class_0' 'class_1' 'class_2']\n",
+            "['alcohol', 'malic_acid', 'ash', 'alcalinity_of_ash', 'magnesium', 'total_phenols', 'flavanoids', 'nonflavanoid_phenols', 'proanthocyanins', 'color_intensity', 'hue', 'od280/od315_of_diluted_wines', 'proline']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -122,32 +126,110 @@
       "metadata": {
         "id": "g5v60YYAYbSr"
       },
-      "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "DdQkC3TWbwQO"
-      },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Print the accuracy in the test set of each method.\n",
-        "\n",
-        "print(\"Logistic Regression Accuracy:\", logreg_accuracy)\n",
-        "print(\"Support Vector Machines Accuracy:\", svm_accuracy)\n",
-        "print(\"Decision Tree Accuracy:\", dt_accuracy)"
+        "# Importing the necessary modules: from sklearn.linear_model import LogisticRegression,\n",
+        "# from sklearn.svm import SVC, from sklearn.tree import DecisionTreeClassifier,\n",
+        "#from sklearn.metrics import accuracy_score\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.metrics import accuracy_score"
       ],
       "metadata": {
-        "id": "8TD9Sy7tbwce"
+        "id": "DdQkC3TWbwQO"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# the support vector machines (SVM) model\n",
+        "svm = SVC()\n",
+        "svm.fit(X_train, y_train)\n",
+        "svm_pred = svm.predict(X_test)\n",
+        "\n",
+        "# decision tree classifier model\n",
+        "tree = DecisionTreeClassifier()\n",
+        "tree.fit(X_train, y_train)\n",
+        "tree_pred = tree.predict(X_test)\n",
+        "\n",
+        "# train the logistic regression model\n",
+        "lr = LogisticRegression()\n",
+        "lr.fit(X_train, y_train)\n",
+        "lr_pred = lr.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "Zz76n76KQyDD",
+        "outputId": "e811d817-623a-436c-faff-889981693a82",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  n_iter_i = _check_optimize_result(\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# the accuracy of each model on the test set\n",
+        "lr_accuracy = accuracy_score(y_test, lr_pred)\n",
+        "svm_accuracy = accuracy_score(y_test, svm_pred)\n",
+        "tree_accuracy = accuracy_score(y_test, tree_pred)\n",
+        "\n",
+        "print(\"Logistic Regression Accuracy:\", lr_accuracy)\n",
+        "print(\"Support Vector Machines Accuracy:\", svm_accuracy)\n",
+        "print(\"Decision Tree Accuracy:\", tree_accuracy)"
+      ],
+      "metadata": {
+        "id": "8TD9Sy7tbwce",
+        "outputId": "d3c90086-721d-448a-87cc-af414269ab08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Logistic Regression Accuracy: 1.0\n",
+            "Support Vector Machines Accuracy: 0.6388888888888888\n",
+            "Decision Tree Accuracy: 0.9166666666666666\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The accuracy represents how well the models performed in classifying the wines into their respective categories. We have the accuracy scores for logistic regression, support vector machines (SVM), and decision tree models, which can help us understand which model had the highest accuracy and performed the best in this particular task."
+      ],
+      "metadata": {
+        "id": "hlvvYsWYVXSm"
+      }
     },
     {
       "cell_type": "markdown",
@@ -209,6 +291,8 @@
         "\n",
         " **What does the stratify mean?**\n",
         "\"Stratify means \" ensuring that our machine learning models are trained and evaluated on a representative sample of data. It helps prevent bias and ensures that our models can accurately handle different categories or types of data. By maintaining the same proportion of categories in each subset, we can get a better understanding of how well our models perform across the entire dataset, particularly when dealing with imbalanced data where some categories may have fewer samples.\n",
+        "\n",
+        "Note: Stratified sampling is a basic sampling method in statistics. Usually, we use it when the proportions of class labels are very different (also known as imbalanced data).\n",
         "\n"
       ],
       "metadata": {
