--- a/Module04_HW.ipynb
+++ b/Module04_HW.ipynb
@@ -88,23 +88,10 @@
         "print(df.feature_names)"
       ],
       "metadata": {
-        "id": "zJiDaX-dhJ3H",
-        "outputId": "f12aa9d3-c5b1-4b59-c8a5-e1daea35e66e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "zJiDaX-dhJ3H"
       },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['class_0' 'class_1' 'class_2']\n",
-            "['alcohol', 'malic_acid', 'ash', 'alcalinity_of_ash', 'magnesium', 'total_phenols', 'flavanoids', 'nonflavanoid_phenols', 'proanthocyanins', 'color_intensity', 'hue', 'od280/od315_of_diluted_wines', 'proline']\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -113,20 +100,16 @@
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "# separate 20% data as test data set\n",
-        "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42) #This parameter is used to ensure that the data split is reproducible. By setting it to a specific value, in this case, 42, we ensure that every time we run the code, the data will be split in the same way. This is important for reproducibility and consistent evaluation of our models.\n",
-        "\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
         "    X, y,\n",
         "    test_size=0.2,\n",
-        "    random_state=2,\n",
-        "    stratify=y\n",
-        ")\n",
-        "\n"
+        "    random_state=42\n",
+        ")"
       ],
       "metadata": {
         "id": "g5v60YYAYbSr"
       },
-      "execution_count": 3,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -143,7 +126,7 @@
       "metadata": {
         "id": "DdQkC3TWbwQO"
       },
-      "execution_count": 10,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -160,18 +143,18 @@
         "tree_pred = tree.predict(X_test)\n",
         "\n",
         "# train the logistic regression model\n",
-        "lr = LogisticRegression()\n",
+        "lr = LogisticRegression(max_iter=100)\n",
         "lr.fit(X_train, y_train)\n",
         "lr_pred = lr.predict(X_test)"
       ],
       "metadata": {
-        "id": "Zz76n76KQyDD",
-        "outputId": "e811d817-623a-436c-faff-889981693a82",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Zz76n76KQyDD",
+        "outputId": "48b98150-2db9-47b8-bab9-c444c5438c50"
       },
-      "execution_count": 16,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,26 +181,26 @@
         "svm_accuracy = accuracy_score(y_test, svm_pred)\n",
         "tree_accuracy = accuracy_score(y_test, tree_pred)\n",
         "\n",
-        "print(\"Logistic Regression Accuracy:\", lr_accuracy)\n",
-        "print(\"Support Vector Machines Accuracy:\", svm_accuracy)\n",
-        "print(\"Decision Tree Accuracy:\", tree_accuracy)"
+        "print(\"Logistic Regression Accuracy Test:\", lr_accuracy)\n",
+        "print(\"Support Vector Machines Accuracy Test:\", svm_accuracy)\n",
+        "print(\"Decision Tree Accuracy Test:\", tree_accuracy)"
       ],
       "metadata": {
         "id": "8TD9Sy7tbwce",
-        "outputId": "d3c90086-721d-448a-87cc-af414269ab08",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fe86a835-a398-45f1-80f5-f831a84d953b"
       },
-      "execution_count": 17,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Logistic Regression Accuracy: 1.0\n",
-            "Support Vector Machines Accuracy: 0.6388888888888888\n",
-            "Decision Tree Accuracy: 0.9166666666666666\n"
+            "Logistic Regression Accuracy Test: 0.9722222222222222\n",
+            "Support Vector Machines Accuracy Test: 0.8055555555555556\n",
+            "Decision Tree Accuracy Test: 0.9444444444444444\n"
           ]
         }
       ]
