--- a/Module05_HW.ipynb
+++ b/Module05_HW.ipynb
@@ -91,7 +91,19 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Xa7vBU94ALOE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
+        "\n",
+        "# In the given data set below, identify the number of missing values by column;\n",
+        "import numpy as np\n",
         "import pandas as pd\n",
         "from io import StringIO\n",
         "\n",
@@ -114,9 +126,9 @@
           "height": 206
         },
         "id": "i6vDor1_afIv",
-        "outputId": "c6b9f463-4037-4171-cabb-016c90dba307"
+        "outputId": "eae7bc35-af31-4d45-e29b-b4ac749594ab"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -131,7 +143,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f146a8a7-9ca9-4d75-a245-aec530b44947\">\n",
+              "  <div id=\"df-92bad43a-f9de-4140-a6e9-f8a297362be6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -184,7 +196,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f146a8a7-9ca9-4d75-a245-aec530b44947')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-92bad43a-f9de-4140-a6e9-f8a297362be6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -235,12 +247,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f146a8a7-9ca9-4d75-a245-aec530b44947 button.colab-df-convert');\n",
+              "          document.querySelector('#df-92bad43a-f9de-4140-a6e9-f8a297362be6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f146a8a7-9ca9-4d75-a245-aec530b44947');\n",
+              "          const element = document.querySelector('#df-92bad43a-f9de-4140-a6e9-f8a297362be6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -263,7 +275,74 @@
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The number of missing values by column\n",
+        "df.isnull().sum()"
+      ],
+      "metadata": {
+        "id": "42109BFzDT51",
+        "outputId": "6a5c83ce-98a1-4e54-9886-b48edf8c1dd0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "col1    2\n",
+              "col2    1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# handle the missing values using SimpleImputer from scikit-learn library:\n",
+        "# filling the missing values in col1 by most frequent\n",
+        "# number (hint: strategy='most_frequent')\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "\n",
+        "imr = SimpleImputer(missing_values=np.nan, strategy='most_frequent')\n",
+        "imr = imr.fit(df.values)\n",
+        "imputed_data = imr.transform(df.values)\n",
+        "imputed_data\n"
+      ],
+      "metadata": {
+        "id": "JCb7sKT7D8bP",
+        "outputId": "55837b65-9905-4552-d18f-f72e15b030c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 1.,  2.,  1.],\n",
+              "       [ 1., 11.,  2.],\n",
+              "       [10., 11.,  3.],\n",
+              "       [ 1.,  3.,  4.],\n",
+              "       [ 1., 11.,  5.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     },
@@ -280,9 +359,9 @@
           "height": 206
         },
         "id": "4WtBie5ebV1E",
-        "outputId": "07da949f-665d-49ff-c006-2aed450b967f"
+        "outputId": "ad0dc400-034f-4420-a950-1d0d92d94d97"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -297,7 +376,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-93440bf7-a3e2-4f05-a986-85818f9fe039\">\n",
+              "  <div id=\"df-e0e32512-0b2e-49cb-bf7f-c58e506911ba\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -356,7 +435,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-93440bf7-a3e2-4f05-a986-85818f9fe039')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e0e32512-0b2e-49cb-bf7f-c58e506911ba')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -407,12 +486,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-93440bf7-a3e2-4f05-a986-85818f9fe039 button.colab-df-convert');\n",
+              "          document.querySelector('#df-e0e32512-0b2e-49cb-bf7f-c58e506911ba button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-93440bf7-a3e2-4f05-a986-85818f9fe039');\n",
+              "          const element = document.querySelector('#df-e0e32512-0b2e-49cb-bf7f-c58e506911ba');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -435,7 +514,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 16
         }
       ]
     },
@@ -449,9 +528,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VYXFsqtob43I",
-        "outputId": "c2090727-de08-48fe-bdec-611012cdc847"
+        "outputId": "499d10d2-8040-4067-ec8d-e9fdaa8a5796"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -464,9 +543,30 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 17
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**II. Explain the transformer and estimator in scikit-learn**\n",
+        "\n",
+        "*   **Transformers** are responsible for transforming the data, such as handling missing values. They prepare the data for analysis and modeling. Transformers have two main methods: \"fit\" and \"transform.\" The \"fit\" method learns the necessary information from the data, and the \"transform\" method applies the learned transformations to the data.\n",
+        "\n",
+        "--\n",
+        "\n",
+        "*   **Estimators** are used for learning from data and making predictions. They build models based on the transformed data. Estimators also have two main methods: \"fit\" and \"predict.\" The \"fit\" method trains the model using the transformed data, and the \"predict\" method applies the trained model to make predictions on new, unseen data.\n",
+        "\n",
+        "**What are the differences between them?**\n",
+        " Transformers modify the data, while estimators learn from the modified data and make predictions. Transformers are used in data preprocessing pipelines, and estimators are used as the final components of the pipeline for learning and prediction tasks\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "TiBCXV_1JJrH"
+      }
     },
     {
       "cell_type": "code",
