--- a/Module05_HW.ipynb
+++ b/Module05_HW.ipynb
@@ -121,14 +121,14 @@
         "df"
       ],
       "metadata": {
-        "id": "r2nmUyBaWoCw",
-        "outputId": "b9d5c6c7-283b-4e4f-fbb0-a0b410d61dda",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "r2nmUyBaWoCw",
+        "outputId": "7c11e0cb-3e7f-4ca0-d79c-8b4ab43104bf"
       },
-      "execution_count": 7,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -143,7 +143,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-351679d0-a5f5-47b2-9610-c988012e0f05\">\n",
+              "  <div id=\"df-4a2443e6-5b47-4b1d-929a-02d925454dbb\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -196,7 +196,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-351679d0-a5f5-47b2-9610-c988012e0f05')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4a2443e6-5b47-4b1d-929a-02d925454dbb')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -247,12 +247,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-351679d0-a5f5-47b2-9610-c988012e0f05 button.colab-df-convert');\n",
+              "          document.querySelector('#df-4a2443e6-5b47-4b1d-929a-02d925454dbb button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-351679d0-a5f5-47b2-9610-c988012e0f05');\n",
+              "          const element = document.querySelector('#df-4a2443e6-5b47-4b1d-929a-02d925454dbb');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -275,7 +275,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 59
         }
       ]
     },
@@ -295,13 +295,13 @@
         "df.isnull().sum()"
       ],
       "metadata": {
-        "id": "rGSZ1BwgXC3C",
-        "outputId": "a71eb944-2ea0-435d-cde7-405bdf828f70",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rGSZ1BwgXC3C",
+        "outputId": "c7e9f74e-d724-4a5a-cf70-eb9f5652c209"
       },
-      "execution_count": 8,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -313,7 +313,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 60
         }
       ]
     },
@@ -327,13 +327,13 @@
         "df['col1']"
       ],
       "metadata": {
-        "id": "wGeG3nEfXVSZ",
-        "outputId": "f5c90808-e2a6-4128-b15d-6c069faee3fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wGeG3nEfXVSZ",
+        "outputId": "57dcc017-94df-46f6-a396-e98444b748e0"
       },
-      "execution_count": 13,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,7 +348,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 61
         }
       ]
     },
@@ -392,14 +392,14 @@
         "df"
       ],
       "metadata": {
-        "id": "HZf0kjVEZCsj",
-        "outputId": "3390d8ab-bf50-48ec-da6a-1754840e7073",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        }
+        },
+        "id": "HZf0kjVEZCsj",
+        "outputId": "4b6b0348-19ca-451d-e0ea-8df56db0b45f"
       },
-      "execution_count": 16,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -419,7 +419,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-65fa19a0-3b83-4985-a33d-7a18d0466478\">\n",
+              "  <div id=\"df-aa5f16c4-1a11-41b0-912a-2fda0ba8879b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -508,7 +508,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-65fa19a0-3b83-4985-a33d-7a18d0466478')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aa5f16c4-1a11-41b0-912a-2fda0ba8879b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -559,12 +559,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-65fa19a0-3b83-4985-a33d-7a18d0466478 button.colab-df-convert');\n",
+              "          document.querySelector('#df-aa5f16c4-1a11-41b0-912a-2fda0ba8879b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-65fa19a0-3b83-4985-a33d-7a18d0466478');\n",
+              "          const element = document.querySelector('#df-aa5f16c4-1a11-41b0-912a-2fda0ba8879b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -587,7 +587,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 62
         }
       ]
     },
@@ -599,7 +599,7 @@
       "metadata": {
         "id": "kAlqBphTaRwL"
       },
-      "execution_count": 18,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -615,13 +615,13 @@
         "print(df)\n"
       ],
       "metadata": {
-        "id": "SqR1ONZYZ-Nv",
-        "outputId": "5b191f5f-59a8-4790-92ba-fa4c29562db1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SqR1ONZYZ-Nv",
+        "outputId": "5e316cba-5b99-4965-cdcb-2cd0fb628aed"
       },
-      "execution_count": 19,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -645,7 +645,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4."
+        "4. Assume col3 is the target, separate the original data set in #3 into 80% training and 20% test."
       ],
       "metadata": {
         "id": "f99AopIRaf7S"
@@ -672,7 +672,7 @@
       "metadata": {
         "id": "FH4mcm2vakU5"
       },
-      "execution_count": 28,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -683,15 +683,14 @@
       "metadata": {
         "id": "UDfmGWtRbI8m"
       },
-      "execution_count": 25,
+      "execution_count": 66,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Separate features and target variable\n",
-        "X = df[['col1', 'col2']]\n",
-        "y = df['col1', 'col2']\n",
+        "X,y = df.iloc[:, 1:].values, df.iloc[:, 0].values\n",
         "\n",
         "# Split the dataset into 80% training and 20% test\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
@@ -699,13 +698,39 @@
       "metadata": {
         "id": "ipQShHb_bC5y"
       },
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train"
+      ],
+      "metadata": {
+        "id": "Nfl9vtbalRzn",
+        "outputId": "e746c0d7-ab31-4383-c6b4-d6255c475fb9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([nan, nan, 10.,  1.])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "5."
+        "5. Load scikit-learn's diabetes data set by load_diabetes(), pick the top 3 most discriminative features using Random Forest"
       ],
       "metadata": {
         "id": "apc4F1accBJy"
@@ -727,7 +752,7 @@
       "metadata": {
         "id": "MS6Y3z5BHYsu"
       },
-      "execution_count": 29,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -738,7 +763,7 @@
       "metadata": {
         "id": "2fpozeADb_30"
       },
-      "execution_count": 30,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -748,12 +773,12 @@
         "randomForest.fit(X,y)"
       ],
       "metadata": {
-        "id": "9rh18PsMcN5q",
-        "outputId": "0a2edeca-9c72-4e0d-a702-ed3229f100a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        }
+        },
+        "id": "9rh18PsMcN5q",
+        "outputId": "0a2edeca-9c72-4e0d-a702-ed3229f100a7"
       },
       "execution_count": 31,
       "outputs": [
@@ -778,11 +803,11 @@
         "randomForest.feature_importances_"
       ],
       "metadata": {
-        "id": "MxYUQwhJcqee",
-        "outputId": "bbfd5920-0a2d-4fe0-f215-1e9d473eedde",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MxYUQwhJcqee",
+        "outputId": "bbfd5920-0a2d-4fe0-f215-1e9d473eedde"
       },
       "execution_count": 32,
       "outputs": [
@@ -805,11 +830,11 @@
         "pd.Series(data=randomForest.feature_importances_, index=diabetes.feature_names)"
       ],
       "metadata": {
-        "id": "FdphcFANcyiY",
-        "outputId": "5a88a679-144d-4ea4-d28f-b313d9eab303",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FdphcFANcyiY",
+        "outputId": "5a88a679-144d-4ea4-d28f-b313d9eab303"
       },
       "execution_count": 33,
       "outputs": [
