--- a/Module06_HW.ipynb
+++ b/Module06_HW.ipynb
@@ -180,6 +180,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**4. Based on the data set given above, split data into 80% training and 20% test with stratification, apply PCA to pick the top 2 components, apply a classification algorithm, print the number of misclassified samples in the test set**"
+      ],
+      "metadata": {
+        "id": "_Ekg7B7Yds6n"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import train_test_split\n",
@@ -207,11 +216,11 @@
         "print(\"Number of misclassified samples in the test set:\", misclassified_samples)"
       ],
       "metadata": {
-        "id": "wEs00Pe2aIja",
-        "outputId": "5339e218-40d4-4ccb-be01-af37af3da796",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wEs00Pe2aIja",
+        "outputId": "5339e218-40d4-4ccb-be01-af37af3da796"
       },
       "execution_count": 10,
       "outputs": [
@@ -223,6 +232,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**5. Apply LDA to the above problem**."
+      ],
+      "metadata": {
+        "id": "qGYISL0fdyNY"
+      }
     },
     {
       "cell_type": "code",
@@ -245,11 +263,11 @@
         "print(\"Number of misclassified samples in the test set:\", misclassified_samples)"
       ],
       "metadata": {
-        "id": "EA4hwsCzbcEt",
-        "outputId": "45158579-3a98-474c-e4c0-311dc5fded36",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EA4hwsCzbcEt",
+        "outputId": "45158579-3a98-474c-e4c0-311dc5fded36"
       },
       "execution_count": 9,
       "outputs": [
